--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
   },
